--- a/Extended UI-mod-card.html
+++ b/Extended UI-mod-card.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Extended UI</title>
 <head>
     <style>
@@ -273,3 +274,4 @@
     </div>
 </body>
 </html>
+
