--- a/Mindustry Overhaul-mod-card.html
+++ b/Mindustry Overhaul-mod-card.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <meta charset="UTF-8">
 <title>Mindustry Overhaul</title>
 <head>
@@ -220,3 +221,4 @@
     </div>
 </body>
 </html>
+
