--- a/TimeControl-mod-card.html
+++ b/TimeControl-mod-card.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>TimeControl</title>
 <head>
     <style>
@@ -198,3 +199,4 @@
     </div>
 </body>
 </html>
+
