--- a/Xanthia-mod-card.html
+++ b/Xanthia-mod-card.html
@@ -1,6 +1,7 @@
 c<!DOCTYPE html>
 <html lang="ru">
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <title>Xanthia</title>
 <head>
     <style>
@@ -290,3 +291,4 @@ c<!DOCTYPE html>
     </div>
 </body>
 </html>
+
