--- a/schemepack 400+-mod-card.html
+++ b/schemepack 400+-mod-card.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 <meta charset="UTF-8">
 <title>schemepack 400+</title>
 <head>
@@ -199,4 +200,5 @@
         </div>
     </div>
 </body>
+
 </html>
