--- a/reVision-mod-card.html
+++ b/reVision-mod-card.html
@@ -190,6 +190,9 @@
                     <br>
                 <strong>- Шредер</strong><br>
                 маленькая турель из металлолома<br>
+                    <div class="image-section">
+            <img src="photo/revision-shreder.png" alt="Изображение мода">
+                 </div>
                  <br>
                 <strong>Хакер</strong><br>
                 Захватывает юнитов врагов. Скорость взлома зависит<br>
@@ -257,4 +260,5 @@
     </div>
 </body>
 </html>
+
 
