--- a/index.html
+++ b/index.html
@@ -347,6 +347,23 @@
                 <span class="tag">схемы</span>
             </div>
         </div>
+            <!-- Карточка седьмого мода -->
+        <div class="mod-card руды жидкости турели стены новые-механики юниты планеты буры фабрик">
+            <h3>Revengeance</h3>
+            <p>Первый мой мод в котором вы с помощю межпланетного ускорителя попадаете на планету Селестис.</p>
+            <button onclick="window.location.href='Revengeance-mod-card.html'">Подробнее</button>
+            <div class="tags">
+               <span class="tag">руды</span>
+                <span class="tag">жидкости</span>
+                <span class="tag">турели</span>
+                 <span class="tag">стены</span>
+                  <span class="tag">новые-механики</span>
+                   <span class="tag">юниты</span>
+                    <span class="tag">планеты</span>
+                    <span class="tag">буры</span>
+                    <span class="tag">фабрики</span>
+            </div>
+        </div>
     </div>
 
     <!-- Подвал -->
