--- a/Revengeance-mod-card.html
+++ b/Revengeance-mod-card.html
@@ -581,7 +581,7 @@ c<!DOCTYPE html>
         <div class="section">
             <h2>Скриншоты</h2>
             <div class="image-section">
-                <img src="Revengeance-gameplay1.jpg alt="Скриншот 1">
+                <img src="Revengeance-gameplay1.jpg" alt="Скриншот 1">
                 <img src="Revengeance-gameplay2.jpg" alt="Скриншот 2">
             </div>
         </div>
@@ -677,6 +677,7 @@ c<!DOCTYPE html>
 </html>
 
  
+
 
 
 
