--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         
         .tag {
             color: #ffffff;
-            background-color: #667eea;
+            background-color: #000000;
             padding: 3px 8px;
             border-radius: 15px;
             font-size: 12px;
@@ -459,5 +459,6 @@
     </script>
 </body>
 </html>
+
 
 
