--- a/reVision-mod-card.html
+++ b/reVision-mod-card.html
@@ -451,8 +451,8 @@
         <div class="section">
             <h2>Скриншоты</h2>
             <div class="image-section">
-                <img src="photo/Revengeance-gameplay1.jpg" alt="Скриншот 1">
-                <img src="photo/Revengeance-gameplay2.jpg" alt="Скриншот 2">
+                <img src="revision-gameplay1.jpg" alt="Скриншот 1">
+                <img src="revision-gameplay2.jpg" alt="Скриншот 2">
             </div>
         </div>
         
@@ -483,7 +483,7 @@
 
         <!-- Кнопка загрузки -->
         <div class="section">
-            <a href="https://github.com/ItzCraft/Xanthia.git" class="download-btn"><strong>Скачать мод</strong></a>
+            <a href="https://github.com/Slava0135/reVision" class="download-btn"><strong>Скачать мод</strong></a>
         </div>
     </div>
 </body>
@@ -547,6 +547,7 @@
 </html>
 
  
+
 
 
 
