--- a/reVision-mod-card.html
+++ b/reVision-mod-card.html
@@ -294,7 +294,7 @@
         <!-- Секция описания -->
         <div class="description section">
             <h2>Описание</h2>
-            <p>Мод добавляет несколько новых механик, буров, турелей и т.д для Серпуло.</p>
+            <p>Мод добавляет несколько новых механик, буров, турелей и т.д для Серпуло. 18 апреля 2025 года, последняя версия мода reVision</p>
         </div>
         
         <!-- Секция характеристик -->
@@ -441,7 +441,7 @@
             <h2>Требования</h2>
             <p>Для корректной работы мода требуется:</p>
             <ul class="features-list">
-                <li>Конкретная версия не указана, последняя версия мода 0.5</li>
+                <li>V14 — поддержка mindustry v8</li>
                 <li>Минимум 2 ГБ оперативной памяти</li>
                 <li>С улыбкой скачивать мод (без улыбки не скачиваем)</li>
             </ul>
@@ -464,9 +464,6 @@
                 <span class="tag">жидкости</span>
                 <span class="tag">турели</span>
                  <span class="tag">стены</span>
-                  <span class="tag">новые-механики</span>
-                   <span class="tag">юниты</span>
-                    <span class="tag">планеты</span>
                     <span class="tag">буры</span>
                      <span class="tag">фабрики</span>
                     
@@ -547,6 +544,7 @@
 </html>
 
  
+
 
 
 
