--- a/index.html
+++ b/index.html
@@ -138,6 +138,19 @@ option:focus, option:hover {
     font-weight: bold;
 }
 
+
+.image-section {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        
+        .image-section img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+
 /* Контейнер результатов поиска */
 .search-results-container {
     display: none;
@@ -285,6 +298,9 @@ footer {
         <!-- Карточка первого мода -->
         <div class="mod-card буры турели новые-механики стены фабрики">
             <h3>reVision</h3>
+             <div class="image-section">
+                <img src="revision-icon.png" alt="Скриншот 2">
+            </div>
             <p>Добавляет несколько новых механик и разбавляет ваниллу</p>
             <button onclick="window.location.href='reVision-mod-card.html'">Подробнее</button>
             <div class="tags">
@@ -469,6 +485,7 @@ footer {
     </script>
 </body>
 </html>
+
 
 
 
