--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@ footer {
     <div class="grid-container" id="main-grid">
         <!-- Карточка первого мода -->
         <div class="mod-card буры турели новые-механики стены фабрики">
-            <h3>reVision</h3>
              <div class="image-section">
-                <img src="revision-icon.png" alt="Скриншот 2">
+                <img src="revision-icon.png" alt="Иконка мода">
             </div>
+            <h3>reVision</h3>
             <p>Добавляет несколько новых механик и разбавляет ваниллу</p>
             <button onclick="window.location.href='reVision-mod-card.html'">Подробнее</button>
             <div class="tags">
@@ -485,6 +485,7 @@ footer {
     </script>
 </body>
 </html>
+
 
 
 
