--- a/reVision-mod-card.html
+++ b/reVision-mod-card.html
@@ -275,6 +275,9 @@
             <h1>reVision</h1>
             <p>Мод разбавляет обычный Миндастри интересными нововеденьями<br> 
             </p>
+             <div class="image-section">
+                <img src="revision-icon.png" alt="Иконка мода">
+            </div>
         </div>
         
         
@@ -531,6 +534,7 @@
 </html>
 
  
+
 
 
 
