--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 }
 
 .container {
-    max-width: 1200px;
     margin: auto;
     overflow: hidden;
     padding: 20px;
@@ -71,9 +70,9 @@ option:focus, option:hover {
 
 /* Карточка мода */
 .mod-card {
+    width: 260px;
     display: inline-block;
     vertical-align: top;
-    width: calc(33% - 20px);
     margin-right: 20px;
     margin-bottom: 20px;
     background-color: #ffffff; /* Белый фон карточек */
@@ -137,7 +136,6 @@ option:focus, option:hover {
     font-size: 12px;
     font-weight: bold;
 }
-
 
 .image-section {
             text-align: center;
@@ -253,6 +251,9 @@ footer {
 
 .social-links a:hover {
     color: #222222; /* Темно-чёрный при наведении */
+}
+.grid-container{
+    width: 1100px;
 }
     </style>
 </head>
@@ -482,8 +483,6 @@ footer {
     </script>
 </body>
 </html>
-
-
 
 
 
