--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ option:focus, option:hover {
     align-items: center;
     margin-bottom: 20px;
     padding: 10px 0;
-    border-bottom: 2px solid #000000;
+    border-bottom: 2px solid #ffffff;
 }
 
 .results-count {
@@ -483,6 +483,7 @@ footer {
     </script>
 </body>
 </html>
+
 
 
 
