--- a/Extended UI-mod-card.html
+++ b/Extended UI-mod-card.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>extended UI</title>
 <head>
     <style>
@@ -516,3 +517,4 @@
 </html>
 
  
+
