--- a/Revengeance-mod-card.html
+++ b/Revengeance-mod-card.html
@@ -1,5 +1,6 @@
 c<!DOCTYPE html>
 <html lang="ru">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <title>Revengeance</title>
 <head>
@@ -673,6 +674,7 @@ c<!DOCTYPE html>
 </html>
 
  
+
 
 
 
