--- a/reVision-mod-card.html
+++ b/reVision-mod-card.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta charset="UTF-8">
 <title>reVision</title>
 <head>
@@ -531,6 +532,7 @@
 </html>
 
  
+
 
 
 
