--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Добавлено для адаптивности -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0"> <!-- Добавлено для адаптивности -->
     <title>Каталог модов Mindustry</title>
     <style>
         body {
@@ -162,7 +162,7 @@ option:focus, option:hover {
     align-items: center;
     margin-bottom: 20px;
     padding: 10px 0;
-    border-bottom: 2px solid #ffffff;
+    border-bottom: 2px solid #000000;
 }
 
 .results-count {
@@ -256,6 +256,7 @@ footer {
     width: 1100px;
 }
     </style>
+
 </head>
 <body>
 <div class="container">
@@ -483,9 +484,6 @@ footer {
     </script>
 </body>
 </html>
-
-
-
 
 
 
