--- a/index.html
+++ b/index.html
@@ -14,9 +14,32 @@
 }
 
 .container {
-    margin: auto;
-    overflow: hidden;
-    padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+/* Мобильная адаптация */
+@media screen and (max-width: 768px) {
+    .grid-container {
+        width: 100%;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .mod-card {
+        width: 100% !important;
+        margin-right: 0 !important;
+    }
+
+    .search-and-category {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    select {
+        width: 100%;
+    }
 }
 
 /* Общий блок для полей ввода */
@@ -484,6 +507,7 @@ footer {
     </script>
 </body>
 </html>
+
 
 
 
