--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 }
 
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
+    margin: auto;
+    overflow: hidden;
+    padding: 20px;
 }
 
 /* Мобильная адаптация */
@@ -507,6 +507,7 @@ footer {
     </script>
 </body>
 </html>
+
 
 
 
